--- a/static/styles/variables.less
+++ b/static/styles/variables.less
@@ -43,16 +43,15 @@
 //
 
 // Buttons
-@next-prev-background-width: 40px;
+@next-prev-background-width: 50px;
 @close-background-width: @next-prev-background-width;
 
 @close-width: 100px;
 
-@prev-width-position:100px;
-@next-width-position:calc(~"100% -" @prev-width-position);
+@background-edge-offset: 100px;
 
 //Image
-@lightbox-image-top-margin:20px;
+@lightbox-image-top-margin: 100px;
 
 // ...............................................
 // Mobile
